[gd_scene load_steps=2 format=3 uid="uid://brpdemh2hpib6"]

[ext_resource type="Script" path="res://scenes/world/item_generator/item_generator.gd" id="1_xsnwv"]

[node name="ItemGenerator" type="Node2D"]
script = ExtResource("1_xsnwv")

[node name="SmcLayer" type="Node2D" parent="."]

[node name="OfferingLayer" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true
